Min-height for columns, to stop them collapsing

--- a/mysoc-footer-example-grid.scss
+++ b/mysoc-footer-example-grid.scss
@@ -36,6 +36,7 @@ $grid-breakpoint-sm: 768px;
   %col {
     padding-left: $grid-gutter / 2;
     padding-right: $grid-gutter / 2;
+    min-height: 1px;
   }
 
   @for $i from 1 through 12 {
